--- a/api-gateway/Jenkinsfile
+++ b/api-gateway/Jenkinsfile
@@ -7,6 +7,7 @@ pipeline {
                 DOCKER_IMAGE="heyyytamvo/eks"
             }
             steps {
+                sh "docker pull alpine"
                 sh "docker build -t ${DOCKER_IMAGE}:${DOCKER_TAG} . "
                 sh "docker tag ${DOCKER_IMAGE}:${DOCKER_TAG} ${DOCKER_IMAGE}:latest"
                 sh "docker image ls | grep ${DOCKER_IMAGE}"
