--- a/api-gateway/Dockerfile
+++ b/api-gateway/Dockerfile
@@ -3,7 +3,9 @@ FROM node:20-alpine3.20
 WORKDIR /home/app
 
 COPY . /home/app
-
+# Debug
+RUN ls /home/app
+# Debug
 RUN npm install
 RUN npm run build
 
