Update Dockerfile Info and Order

--- a/info/Dockerfile
+++ b/info/Dockerfile
@@ -2,8 +2,7 @@ FROM node:20-alpine3.20
 
 WORKDIR /home/app
 
-COPY . /home/app
-
+COPY ./info /home/app
 
 
 ARG BUILDTIME_DB_DATABASE=default
@@ -18,7 +17,7 @@ ENV DB_PORT=$BUILDTIME_DB_PORT
 ENV DB_USERNAME=$BUILDTIME_DB_USERNAME
 ENV DB_PASSWORD=$BUILDTIME_DB_PASSWORD
 
-# RUN npm install
+RUN npm install
 RUN npm run build
 EXPOSE 3002
 
