--- a/api-gateway/Jenkinsfile
+++ b/api-gateway/Jenkinsfile
@@ -31,7 +31,7 @@ pipeline {
         stage("scan") {
             steps {
                 withSonarQubeEnv(installationName: 'jenkins') { 
-                    sh './mvnw clean org.sonarsource.scanner.maven:sonar-maven-plugin:3.9.0.2155:sonar'
+                    sh 'mvn sonar:sonar -Dsonar.projectKey=Test -Dsonar.sources=.'
                 }
             }
         }
