--- a/api-gateway/Jenkinsfile
+++ b/api-gateway/Jenkinsfile
@@ -27,14 +27,12 @@ pipeline {
         //         sh "docker image rm ${DOCKER_IMAGE}:${DOCKER_TAG}"
         //     }
         // }
-        stage('SCM') {
-            checkout scm
-        }
-        
         stage("scan") {
-            def scannerHome = tool 'SonarScanner';
-            withSonarQubeEnv(installationName: 'jenkins') {
-                sh "${scannerHome}/bin/sonar-scanner"
+            steps{
+                def scannerHome = tool 'SonarScanner';
+                withSonarQubeEnv(installationName: 'jenkins') {
+                    sh "${scannerHome}/bin/sonar-scanner"
+                }
             }
         }
     }
