--- a/api-gateway/Jenkinsfile
+++ b/api-gateway/Jenkinsfile
@@ -28,7 +28,7 @@ pipeline {
             }
         }
 
-        stage('SonarQube Analysis') {
+        stage('SonarQube Analysis Source Code') {
             when { 
                 allOf {
                     changeset "api-gateway/**"
