--- a/api-gateway/Jenkinsfile
+++ b/api-gateway/Jenkinsfile
@@ -37,15 +37,6 @@ pipeline {
                 //     sh 'echo $DOCKER_PASSWORD | docker login --username $DOCKER_USERNAME --password-stdin'
                 //     sh "docker push ${DOCKER_IMAGE}:${DOCKER_TAG}"
                 // }
-                script{
-                    docker.withRegistry("https://891377192865.dkr.ecr.us-east-1.amazonaws.com/fcjws2", "ecr:us-east-1:aws-cre") {
-                        docker.image("${DOCKER_IMAGE}:${DOCKER_TAG}").push()
-                    }
-                }
-                
-                
-                // Clean up to save disk space
-                sh "docker image rm ${DOCKER_IMAGE}:${DOCKER_TAG}"
             }
         }
 
@@ -68,5 +59,19 @@ pipeline {
         //         }
         //     }
         // }
+
+        stage('Deploy Image') {
+            steps{
+                script{
+                    docker.withRegistry("https://891377192865.dkr.ecr.us-east-1.amazonaws.com/fcjws2", "ecr:us-east-1:aws-cre") {
+                        dockerImage.push("${DOCKER_IMAGE}:${DOCKER_TAG}")
+                    }
+                }
+            }
+        }
+
+        stage("Clean Resources"){
+            sh "docker image rm ${DOCKER_IMAGE}:${DOCKER_TAG}"
+        }
     }
 }
