--- a/api-gateway/Jenkinsfile
+++ b/api-gateway/Jenkinsfile
@@ -12,6 +12,8 @@ pipeline {
                 }
             }
             environment {
+                REGISTRY_DOMAIN = "https://891377192865.dkr.ecr.us-east-1.amazonaws.com/fcjws2"
+                DOCKERFILE_PATH = "api-gateway/Dockerfile"
                 DOCKER_TAG = "api-gateway-${GIT_COMMIT.substring(0, 7)}"
                 DOCKER_IMAGE = "891377192865.dkr.ecr.us-east-1.amazonaws.com/fcjws2"
             }
@@ -31,8 +33,12 @@ pipeline {
                 //     // Clean up to save disk space
                 //     sh "docker image rm ${DOCKER_IMAGE}:${DOCKER_TAG}"
                 // }
-                sh "docker build -t ${DOCKER_IMAGE}:${DOCKER_TAG} -f api-gateway/Dockerfile ."
-                sh "docker image ls | grep ${DOCKER_IMAGE}"
+                // sh "docker build -t ${DOCKER_IMAGE}:${DOCKER_TAG} -f api-gateway/Dockerfile ."
+                // sh "docker image ls | grep ${DOCKER_IMAGE}"
+
+                script{
+                    app = docker.build("${DOCKER_IMAGE}", "${DOCKERFILE_PATH}")
+                }
                 // withCredentials([usernamePassword(credentialsId: 'docker-hub', usernameVariable: 'DOCKER_USERNAME', passwordVariable: 'DOCKER_PASSWORD')]) {
                 //     sh 'echo $DOCKER_PASSWORD | docker login --username $DOCKER_USERNAME --password-stdin'
                 //     sh "docker push ${DOCKER_IMAGE}:${DOCKER_TAG}"
@@ -63,8 +69,8 @@ pipeline {
         stage('Deploy Image') {
             steps{
                 script{
-                    docker.withRegistry("https://891377192865.dkr.ecr.us-east-1.amazonaws.com/fcjws2", "ecr:us-east-1:aws-cre") {
-                        dockerImage.push("${DOCKER_IMAGE}:${DOCKER_TAG}")
+                    docker.withRegistry("${REGISTRY_DOMAIN}", "ecr:us-east-1:aws-cre") {
+                        app.push("${DOCKER_TAG}")
                     }
                 }
             }
