--- a/api-gateway/Jenkinsfile
+++ b/api-gateway/Jenkinsfile
@@ -37,7 +37,7 @@ pipeline {
                 // sh "docker image ls | grep ${DOCKER_IMAGE}"
 
                 script{
-                    app = docker.build("${DOCKER_IMAGE}", "${DOCKERFILE_PATH}")
+                    app = docker.build("${DOCKER_IMAGE}:${DOCKER_TAG}", "-f ${DOCKERFILE_PATH}")
                 }
                 // withCredentials([usernamePassword(credentialsId: 'docker-hub', usernameVariable: 'DOCKER_USERNAME', passwordVariable: 'DOCKER_PASSWORD')]) {
                 //     sh 'echo $DOCKER_PASSWORD | docker login --username $DOCKER_USERNAME --password-stdin'
