--- a/api-gateway/Jenkinsfile
+++ b/api-gateway/Jenkinsfile
@@ -12,7 +12,7 @@ pipeline {
                 }
             }
             environment {
-                REGISTRY_DOMAIN = "https://891377192865.dkr.ecr.us-east-1.amazonaws.com/fcjws2"
+                REGISTRY_DOMAIN = "https://891377192865.dkr.ecr.us-east-1.amazonaws.com"
                 DOCKERFILE_PATH = "api-gateway/Dockerfile"
                 DOCKER_TAG = "api-gateway-${GIT_COMMIT.substring(0, 7)}"
                 DOCKER_IMAGE = "891377192865.dkr.ecr.us-east-1.amazonaws.com/fcjws2"
