--- a/api-gateway/Jenkinsfile
+++ b/api-gateway/Jenkinsfile
@@ -70,7 +70,7 @@ pipeline {
             steps{
                 script{
                     docker.withRegistry("https://891377192865.dkr.ecr.us-east-1.amazonaws.com", "ecr:us-east-1:aws-cre") {
-                        app.push("${DOCKER_TAG}")
+                        app.push("${DOCKER_IMAGE}:${DOCKER_TAG}")
                     }
                 }
             }
