--- a/api-gateway/Jenkinsfile
+++ b/api-gateway/Jenkinsfile
@@ -10,25 +10,25 @@ pipeline {
     }
 
     stages { 
-        stage('SonarQube Analysis Source Code') {
-            when { 
-                allOf {
-                    changeset "api-gateway/**"
-                    expression { 
-                        sh(returnStatus: true, script: 'git diff --quiet api-gateway/') == 0
-                    }
-                }
-            }
+        // stage('SonarQube Analysis Source Code') {
+        //     when { 
+        //         allOf {
+        //             changeset "api-gateway/**"
+        //             expression { 
+        //                 sh(returnStatus: true, script: 'git diff --quiet api-gateway/') == 0
+        //             }
+        //         }
+        //     }
 
-            steps {
-                script {
-                    def scannerHome = tool 'SonarScanner'
-                    withSonarQubeEnv('jenkins') {
-                        sh "${scannerHome}/bin/sonar-scanner"
-                    }
-                }
-            }
-        }
+        //     steps {
+        //         script {
+        //             def scannerHome = tool 'SonarScanner'
+        //             withSonarQubeEnv('jenkins') {
+        //                 sh "${scannerHome}/bin/sonar-scanner"
+        //             }
+        //         }
+        //     }
+        // }
 
         stage('Build') {
             when { 
