--- a/api-gateway/Jenkinsfile
+++ b/api-gateway/Jenkinsfile
@@ -55,5 +55,11 @@ pipeline {
                 }
             }
         }
+
+        stage('Remove Resource') {
+            steps{
+                sh "docker image rm ${DOCKER_IMAGE}:${DOCKER_TAG}"
+            }
+        }
     }
 }
