--- a/api-gateway/Jenkinsfile
+++ b/api-gateway/Jenkinsfile
@@ -41,7 +41,7 @@ pipeline {
             }
             steps {
                 script{
-                    app = docker.build("${DOCKER_IMAGE}:${DOCKER_TAG}", "-f ${DOCKERFILE_PATH} .")
+                    app = docker.build("${DOCKER_IMAGE}:${DOCKER_TAG}", "--no-cache", "-f ${DOCKERFILE_PATH} .")
                 }
             }
         }
